[Finishes #176718352] contact selection issue resolved, "should show dropdown only for parent companies" issue fixed, "close button not visible in opera" issue fixed

--- a/src/app/pages/logged-in/company/company-request-dashboard/company-request-dashboard.page.scss
+++ b/src/app/pages/logged-in/company/company-request-dashboard/company-request-dashboard.page.scss
@@ -39,3 +39,18 @@ ion-footer {
     --box-shadow: none;
   }
 }
+.add-request {
+  position: fixed;
+  bottom: 0;
+  z-index: 999;
+  right: 5px;
+  font-size: 33px;
+  border: 1px solid;
+  padding: 13px;
+  height: 61px;
+  border-radius: 50%;
+  background: #000;
+  ion-icon {
+    color:#fff;
+  }
+}
